--- a/templates/holdings.html
+++ b/templates/holdings.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Current Holdings</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <style>
         .card-header { background-color: #e9ecef; }
         .positive { color: green; }
