--- a/templates/tax_report.html
+++ b/templates/tax_report.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Tax Report</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <style>
         .positive { color: green; }
         .negative { color: red; }
